[gd_scene load_steps=3 format=2]

[ext_resource path="res://menus/EndMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Med_Text.tres" type="DynamicFont" id=2]

[node name="EndMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 244.0
margin_top = -100.0
margin_right = 268.0
margin_bottom = 100.0
size_flags_vertical = 3
color = Color( 0.054902, 0.0313726, 0.0901961, 0.494118 )
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 13.0
margin_right = -20.0
margin_bottom = -13.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
margin_right = 496.0
margin_bottom = 174.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12

[node name="Win_Lose" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_right = 496.0
margin_bottom = 16.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
text = "Has ganado!"
align = 1

[node name="Desc" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 496.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 1
text = "Description"
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 496.0
margin_bottom = 174.0

[node name="NewGame" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 246.0
margin_bottom = 22.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Nueva partida"
flat = true

[node name="Exit" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 250.0
margin_right = 496.0
margin_bottom = 22.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Salir"
flat = true

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/Exit" to="." method="_on_Exit_pressed"]
